--- a/styles/globals.css
+++ b/styles/globals.css
@@ -548,12 +548,51 @@ input[type="range"] {
 }
 
 .ReactModal__Overlay--after-open {
-  /* background-color: #000 !important; */
-  background-color: rgba(40, 8, 8, 0.75)!important;
-   z-index: 9999;
-} 
+  background-color: rgba(0, 0, 0, 0.8) !important;
+  z-index: 9999;
+}
 
 .ReactModal__Content {
   padding: 0 !important;
-  background-color: white !important;
 }
+
+.languageImgSec span {
+  height: 100%!important;
+}
+
+/* styles.css or your global stylesheet */
+ /* input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
+input[type="radio"] + label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  padding-left: 1.3rem; 
+  line-height: 1.5;
+}
+
+ input[type="radio"] + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 1px solid #000;  
+  background-color: #fff; 
+}
+
+ input[type="radio"]:checked + label::before {
+  border-color: var(--theme-color)!important;  
+  background-color: var(--theme-color)!important; 
+} */
+
+ 
