--- a/styles/globals.css
+++ b/styles/globals.css
@@ -618,3 +618,23 @@ input[type="radio"] + label {
   color: #B9B9B9 !important;
   font-size: 14px !important;
 }
+
+[type='text']:focus, 
+[type='email']:focus, 
+[type='url']:focus, 
+[type='password']:focus, 
+[type='number']:focus, 
+[type='date']:focus, 
+[type='datetime-local']:focus, 
+[type='month']:focus, 
+[type='search']:focus, 
+[type='tel']:focus, 
+[type='time']:focus, 
+[type='week']:focus, 
+[multiple]:focus, 
+textarea:focus, 
+select:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: initial; /* or use 'transparent' or 'none' depending on the context */
+}
