--- a/styles/globals.css
+++ b/styles/globals.css
@@ -638,3 +638,14 @@ select:focus {
     box-shadow: none;
     border-color: initial; /* or use 'transparent' or 'none' depending on the context */
 }
+
+/* styles.css */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  z-index: 50; /* Make sure it's above other content but below the modal */
+}
