--- a/styles/globals.css
+++ b/styles/globals.css
@@ -551,7 +551,7 @@ input[type="range"] {
 } */
 
 .ReactModal__Overlay--after-open {
-  background-color: rgba(0, 0, 0, 0.8) !important;
+  background-color: rgba(0, 0, 0, 0.6) !important;
   z-index: 9999;
 }
 
@@ -646,6 +646,6 @@ select:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-  z-index: 50; /* Make sure it's above other content but below the modal */
+  background-color: rgba(0, 0, 0, 0.6); 
+  z-index: 50;  
 }
