--- a/styles/globals.css
+++ b/styles/globals.css
@@ -649,3 +649,7 @@ select:focus {
   background-color: rgba(0, 0, 0, 0.6); 
   z-index: 50;  
 }
+
+.languagePopupImg{
+  overflow: hidden!important;
+}
