--- a/styles/globals.css
+++ b/styles/globals.css
@@ -419,6 +419,16 @@ body {
   transform: translate(-50%) !important;
 }
 
+.slick-dots li.slick-active { 
+  width: 40px!important; 
+}
+
+.slick-dots li.slick-active button:before {
+  background-color: var(--Secondary-theme);
+  width: 30px !important;
+  border-radius: 10px !important;
+}
+
 
 
 
@@ -426,6 +436,7 @@ body {
 
 #inventoryCarousel .slick-dots {
   width: 100%;
+  position: inherit!important;
   overflow-x: auto !important;
   bottom: 5px !important;
   border-top: 1px solid rgba(217, 217, 217, 1) !important;
@@ -544,12 +555,7 @@ input[type="range"] {
   margin-left: inherit !important
 }
 
-/* .tractorsFeatures {
-  margin-top: -41px !important;
-  position: absolute!important;
-  z-index: 999999999999999;
-} */
-
+ 
 .ReactModal__Overlay--after-open {
   background-color: rgba(0, 0, 0, 0.6) !important;
   z-index: 9999;
@@ -562,45 +568,10 @@ input[type="range"] {
 .languageImgSec span {
   height: 100% !important;
 }
-
-/* styles.css or your global stylesheet */
-/* input[type="radio"] {
-  opacity: 0;
-  position: absolute;
-  width: 0;
-  height: 0;
-}
-
-input[type="radio"] + label {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  position: relative;
-  padding-left: 1.3rem; 
-  line-height: 1.5;
-}
-
- input[type="radio"] + label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  border: 1px solid #000;  
-  background-color: #fff; 
-}
-
- input[type="radio"]:checked + label::before {
-  border-color: var(--theme-color)!important;  
-  background-color: var(--theme-color)!important; 
-} */
-
-.detailsSlideImg {
+ 
+/* .detailsSlideImg {
   margin-bottom: 2.3rem !important;
-}
+ } */
 
 .storeInventoryBannerImg::-webkit-scrollbar {
   height: 5px;
@@ -653,3 +624,5 @@ select:focus {
 .languagePopupImg{
   overflow: hidden!important;
 }
+
+ 
