--- a/styles/globals.css
+++ b/styles/globals.css
@@ -628,3 +628,42 @@ select:focus {
 input.error {
   border: 2px solid red;
 }
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid var(--theme-color);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.brands-container::-webkit-scrollbar {
+  width: 5px;  
+}
+
+.brands-container::-webkit-scrollbar-thumb {
+  background-color: var(--theme-color);  
+}
+
+.brands-container::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color of the scrollbar track */
+ }
