--- a/styles/globals.css
+++ b/styles/globals.css
@@ -674,3 +674,42 @@ input.error {
   background-color: #f1f1f1;
   /* Color of the scrollbar track */
 }
+
+/* CSS for Modal Animation */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  animation: slideIn 0.5s ease-out;
+}
+
+/* Keyframes for slide-in animation */
+@keyframes slideIn {
+  from {
+      transform: translateY(-100%);
+  }
+  to {
+      transform: translateY(0);
+  }
+}
