--- a/styles/globals.css
+++ b/styles/globals.css
@@ -713,3 +713,11 @@ input.error {
       transform: translateY(0);
   }
 }
+
+.truncate-3-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
