inventory border issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -721,3 +721,9 @@ input.error {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
